/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.resource.service.box;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "box/BoxResource.proto";
import "box/BoxStorage.proto";

service BoxResourceService {

    // Storage

    rpc getBoxStorage (org.apache.airavata.mft.resource.stubs.box.storage.BoxStorageGetRequest) returns
    (org.apache.airavata.mft.resource.stubs.box.storage.BoxStorage) {
        option (google.api.http) = {
           get: "/v1.0/resource/box/storage"
        };
    }

    rpc createBoxStorage (org.apache.airavata.mft.resource.stubs.box.storage.BoxStorageCreateRequest) returns
    (org.apache.airavata.mft.resource.stubs.box.storage.BoxStorage) {
        option (google.api.http) = {
           post: "/v1.0/resource/box/storage"
        };
    }

    rpc updateBoxStorage (org.apache.airavata.mft.resource.stubs.box.storage.BoxStorageUpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
           put: "/v1.0/resource/box/storage"
        };
    }

    rpc deleteBoxStorage (org.apache.airavata.mft.resource.stubs.box.storage.BoxStorageDeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
           delete: "/v1.0/resource/box/storage"
        };
    }

    // Resource

    rpc getBoxResource (org.apache.airavata.mft.resource.stubs.box.resource.BoxResourceGetRequest) returns
                                            (org.apache.airavata.mft.resource.stubs.box.resource.BoxResource) {
        option (google.api.http) = {
           get: "/v1.0/resource/box"
        };
    }

    rpc createBoxResource (org.apache.airavata.mft.resource.stubs.box.resource.BoxResourceCreateRequest) returns
                                            (org.apache.airavata.mft.resource.stubs.box.resource.BoxResource) {
        option (google.api.http) = {
           post: "/v1.0/resource/box"
        };
    }

    rpc updateBoxResource (org.apache.airavata.mft.resource.stubs.box.resource.BoxResourceUpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
           put: "/v1.0/resource/box"
        };
    }

    rpc deleteBoxResource (org.apache.airavata.mft.resource.stubs.box.resource.BoxResourceDeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
           delete: "/v1.0/resource/box"
        };
    }

}